review suggestion - simplify test